--- a/main.css
+++ b/main.css
@@ -5,15 +5,16 @@
 *****************************************/
 body {
     font-size: 16px;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.01rem;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 nav {
     background-color: #003d00;
     color: rgb(253, 253, 253);
-    line-height: 70px;
     padding: 5px;
-    height: 150px;
+    line-height: 50px;
+    font-size: 1rem;
 }
 
 nav a{
@@ -50,6 +51,7 @@ main .column{
 }
 main{
     background:#fff url("pic.png") ;
+    padding: 20px;
     
 }
 footer {
